fix(feedback): TEHVEER-261 - Prevent feedback trigger from overlapping content

--- a/packages/components/src/components/feedback/feedback.module.scss
+++ b/packages/components/src/components/feedback/feedback.module.scss
@@ -21,14 +21,14 @@
 
 .feedback--both,
 .feedback--desktop {
-  @include breakpoints.media-breakpoint-up(md) {
+  @include breakpoints.media-breakpoint-up(lg) {
     @include feedback;
   }
 }
 
 .feedback--both,
 .feedback--mobile {
-  @include breakpoints.media-breakpoint-down(md) {
+  @include breakpoints.media-breakpoint-down(lg) {
     @include feedback;
   }
 }
